src/test/deca/syntax/valid/SO/synt/assignofassign.deca
// Description:
//    Programme minimaliste assignation d'assignation
//
// Resultats:
//    
//
// Historique:
//    cree le 07/01/2022
{
    int x;
    int tab =(x=12);
}