src/test/deca/syntax/invalid/HW/rquoteMissing.deca
// Description:
//    Programme minimaliste oubliant le " fermant
//
// Resultats:
//    Hello
//
// Historique:
//    cree le 06/01/2022
{
        print("Hello);
}